fixed flag size on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,10 @@
         box-sizing: border-box;
     }
 }
+
+@media screen and (max-width: 380px) {
+
+    .flag {
+        width: 3rem;
+    }
+}
